<?xml version="1.0" encoding="utf-8"?>
<!--
      This file is part of AndFChat.
  
      AndFChat is free software: you can redistribute it and/or modify
      it under the terms of the GNU General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
      (at your option) any later version.
  
      AndFChat is distributed in the hope that it will be useful,
      but WITHOUT ANY WARRANTY; without even the implied warranty of
      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
      GNU General Public License for more details.
  
      You should have received a copy of the GNU General Public License
      along with AndFChat.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>

    <!-- Simple stuff for buttons, title etc. -->
    <string name="app_name">AndFChat</string>
    <string name="menu_settings">Settings</string>
    
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="remember_account">Remember Account</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>    
    <string name="settings">Settings</string>
    <string name="bookmark_user">+Bookmark</string>
    <string name="unbookmark_user">-Bookmark</string>
    <string name="show_details">Open Details</string>
    <string name="show_profile">Profile</string>
    <string name="pm_user">Open PM</string>
    <string name="close">Close</string>
    <string name="chatmessage_hint">Enter message</string>
    <string name="send_message">Send</string>
    <string name="friendlist">Friends</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="arrows_left">&lt;&lt;</string>
    <string name="arrows_right">&gt;&gt;</string>
    <string name="channels">Channels</string>
    <string name="public_channels">Public Channels</string>
    <string name="private_channels">Private Channels</string>
    <string name="leave_channel">Leave</string>
    <string name="export_text">Export text</string>    
    <string name="post_ad_text">Post Ad</string>    
    <string name="channel_description">Description</string>
    <string name="actions">Actions</string>
    <string name="select_character">Select Character</string>
    <string name="ad_clickable_advertisment">[Click to see the ad]</string>
    
    <!-- Messages for the chat directly, they will be posted into the chat with a users name at the beginning. Like "XYZ connected." -->
    <string name="message_channel_joined">joined the channel.</string>
    <string name="message_channel_left">left the channel.</string>
    <string name="message_connected">logged on.</string>
    <string name="message_disconnected">logged off.</string>
    <string name="message_status_changed">is now %1$s.</string>
    <string name="message_status_changed_with_message">is now %1$s. [%2$s]</string>
    <string name="message_invite_to_channel">has invited you to join [session=%1$s]%2$s[/session]</string>
    
    <string name="question_disconnect">Do you really want to log off?</string>
    <string name="question_back">Do you really want to go back to character selection?</string>
    <string name="question_delete_log">Do you really want to delete this log?</string>
    
    <!-- longer text messages -->
    <string name="error_login">Login failed. Check your username and password.</string>
    <string name="error_command_not_allowed">This command isn\'t allowed in the active environment.</string>      
    
    <string name="text_about">[b]AndFChat[/b] (Version 0.2.2) is developed under the GPL3 licence.
        \n\nAndFChat is a [b][color=red]THIRD-PARTY[/color][/b] client for F-list.
        \n\nIt\'s still a [b][color=red]BETA[/color][/b], so please use with patience!        
        \nFound bugs can be send via note to [user]AndFChat[/user] (yes, some tags are still not parsed) or directly as issues via GitHub [url]https://github.com/AndFChat/AndFChat/[/url]\n
        \n
        [b][color=red]Still looking for help![/color][/b]\n
        * A native English speaker to rewrite the text\n
        * Artist/designer to improve the interface and add some images.\n
        * Experienced Android developer for UI design, especially scaling questions for different display layouts.\n</string>
    
    <!-- Displayed after the App crashed -->
    <string name="crash_toast_text">Sorry! It looks like the app crashed. Please send the crash report via email or send me a note @ AndFChat on F-list</string>
    
    <!-- Settings translations title + description -->
    <string name="title_feedback">Feedback</string>
    <string name="title_debug">Debug</string>
    <string name="title_general">General</string>
    
    <string name="title_initial_channel">Channel on login</string>
    <string name="description_initial_channel">Choose which channel opens upon login</string>
    <string name="title_log_history">Save chat history</string>
    <string name="description_log_history">Save chat logs to internal storage.  Takes up memory as chat logs get bigger.</string>
    <string name="title_log_channel">Log public channels</string>
    <string name="description_log_channel">Log public channels as well as PMs</string>
    <string name="title_delete_history">Delete your history</string>
    <string name="description_delete_history">Remove all logs from internal storage</string>
    
    <string name="title_show_channel_info">Show channel info</string>
    <string name="description_show_channel_info">Show channel join/leave notifications.</string>
    <string name="title_show_user_status_changes">Show user status changes</string>
    <string name="description_show_user_status_changes">Show status notifications for friends/bookmarks.</string>
    <string name="title_vibration_feedback">Vibrate on new messages</string>
    <string name="description_vibration_feedback">New messages trigger vibration</string>
    <string name="title_led_feedback">Notification light on messages</string>
    <string name="description_led_feedback">New messages trigger white notification light as feedback.</string>
    
    <string name="title_use_debug_channel">Show debug information</string>
    <string name="description_use_debug_channel">Shows the input/output tags in the console.</string>
    
    <string name="title_theme">Select app style</string>
    <string name="description_theme">Choose between different styles for your app. Selecting a new theme requires restarting the app to work.</string>
    
    <string name="title_chat_text_size">Font size</string>
    <string name="description_chat_text_size">Choose the size of the text appearance for the chat</string>
    
    <string-array name="text_size_translation">
        <item>Very Small</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Big</item>
    </string-array>
    
    
    <!-- Themes -->  
    <string-array name="themes_translation">
        <item>Black</item>
        <item>Blue</item>
    </string-array>
    
</resources>
