<!--
      This file is part of AndFChat.
  
      AndFChat is free software: you can redistribute it and/or modify
      it under the terms of the GNU General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
      (at your option) any later version.
  
      AndFChat is distributed in the hope that it will be useful,
      but WITHOUT ANY WARRANTY; without even the implied warranty of
      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
      GNU General Public License for more details.
  
      You should have received a copy of the GNU General Public License
      along with AndFChat.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

   <item android:id="@+id/action_add_chat"
     	android:icon="@drawable/add_chat"
     	android:title="@string/channels"
     	android:showAsAction="ifRoom" 
    />   
    
    <item android:id="@+id/action_open_friendlist"
     	android:icon="@drawable/friends"
     	android:title="@string/friendlist"
     	android:showAsAction="ifRoom" 
    />
   
    <item android:id="@+id/action_open_settings"
     	android:icon="@drawable/settings"
     	android:title="@string/settings"
     	android:showAsAction="ifRoom" 
    />
    
    <item android:id="@+id/action_disconnect"
     	android:icon="@drawable/disconnect"
     	android:title="@string/logout"
     	android:showAsAction="ifRoom" 
    />      

</menu>
