<!--
      This file is part of AndFChat.
  
      AndFChat is free software: you can redistribute it and/or modify
      it under the terms of the GNU General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
      (at your option) any later version.
  
      AndFChat is distributed in the hope that it will be useful,
      but WITHOUT ANY WARRANTY; without even the implied warranty of
      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
      GNU General Public License for more details.
  
      You should have received a copy of the GNU General Public License
      along with AndFChat.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"    
   	android:gravity="center"
   	android:background="@color/black">      
    
    <LinearLayout     
        android:orientation="horizontal"
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:background="@color/gray">
    
	    <TextView 
	        android:id="@+id/joinChannelPopupTitle"
	        android:text="@string/channels"
	        android:textSize="@dimen/text_size_popup_header"
	        android:textStyle="bold"
	        android:textColor="@color/black"
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
			android:paddingLeft="5dp"
			android:paddingRight="5dp"
	        />
    
    </LinearLayout>  
    
	<LinearLayout         
    	android:orientation="horizontal"
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content">
    	
		<Button
			android:id="@+id/publicChannelButton"
		    android:layout_width="0px"
		    android:layout_weight=".5"
		    android:layout_height="wrap_content"
		    android:text="@string/public_channels"
            style="?android:attr/borderlessButtonStyle"
        />  
		    
		<Button
			android:id="@+id/privateChannelButton"
		    android:layout_width="0px"
		    android:layout_weight=".5"
		    android:layout_height="wrap_content"
		    android:text="@string/private_channels"
            style="?android:attr/borderlessButtonStyle"
        /> 		
		    
	</LinearLayout>      
    
    <LinearLayout     
        android:orientation="vertical"
	    android:layout_width="match_parent"
    	android:layout_height="match_parent">

        <ListView 	            
            android:id="@+id/channlesToJoin"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent">             
        </ListView>
        
    </LinearLayout>
    
</LinearLayout>

